BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Audience_Contract_Signer_HCPTS__c.object
<CustomObject>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <referenceTo>EM_Attendee_vod__c</referenceTo>
        <relationshipLabel>Contract Signers</relationshipLabel>
        <relationshipName>Contract_Signers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Entity_Name_HCPTS__c</fullName>
        <label>Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Signatory_Email_HCPTS__c</fullName>
        <defaultValue>&apos;noname@donotreply.com&apos;</defaultValue>
        <label>Entity Signatory Email</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Signatory_Name_HCPTS__c</fullName>
        <label>Entity Signatory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signer_Sequence__c</fullName>
        <label>Signer Sequence</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signer_Title__c</fullName>
        <label>Signer Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contract Signer</label>
    <nameField>
        <displayFormat>SLCS-{0000000000}</displayFormat>
        <label>Contract Signer Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Signers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>